# copulax

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTINUATION_NOTES.md  LICENSE.txt  MANIFEST.in  README.md  cop_te.py  derivative.py  goals.txt  pyproject.toml  pyproject_poetry.txt  pytest.ini  requirements.txt  tox.ini
.github/workflows/: codecov.yml  tests.yml  tests_old.txt
copulax/: __init__.py  special.py  stats.py
copulax/_src/: README.md  _distributions.py  _serialization.py  _utils.py  metrics.py  optimize.py  special.py  stats.py  typing.py
copulax/_src/copulas/: README.md  _archimedean.py  _distributions.py  _mom_init.py  _mv_copulas.py  _registry.py
copulax/_src/multivariate/: README.md  _distributions.py  _normal_mixture.py  _registry.py  _shape.py  _utils.py  mvt_gh.py  mvt_normal.py  mvt_skewed_t.py  mvt_student_t.py
copulax/_src/preprocessing/: __init__.py  data_scaler.py
copulax/_src/timeseries/: __init__.py  _base.py  _diagnostics.py  _init.py  _mackinnon.py  _ols.py  _plotting.py  _recursions.py  _se.py  _stationarity.py  _summary.py  _two_stage_se.py  _unit_root.py
copulax/_src/timeseries/_joint/: __init__.py  arma_garch.py
copulax/_src/timeseries/_mean/: __init__.py  _arma_base.py  ar.py  arma.py  ma.py
copulax/_src/timeseries/_residuals/: __init__.py  _registry.py  _standardise.py
copulax/_src/timeseries/_variance/: __init__.py  _garch_base.py  egarch.py  garch.py  garch_m.py  gjr_garch.py  igarch.py  qgarch.py  tgarch.py
copulax/_src/univariate/: README.md  _approx.py  _cdf.py  _distributions.py  _gof.py  _mean_variance.py  _metrics.py  _normal_mixture.py  _ppf.py  _registry.py  _rvs.py  _utils.py  asym_gen_normal.py  exponential.py  gamma.py  gamma_new.py  gen_normal.py  gh.py  gh_new.py  gig.py  ig.py  ig_new.py  lognormal.py  lognormal_new.py  nig.py  normal.py  skewed_t.py  skewed_t_new.py  student_t.py  student_t_new.py  uniform.py  uniform_new.py  univariate_fitter.py  wald.py
copulax/copulas/: README.md  __init__.py  distributions.py
copulax/multivariate/: README.md  __init__.py  distributions.py  mvt_normal.py
copulax/preprocessing/: README.md  __init__.py
copulax/tests/: README.md  conftest.py  helpers.py  test_archimedean_reference.py  test_copulas_archimedean.py  test_copulas_mv.py  test_data_scaler.py  test_docstring_visibility.py  test_equality.py  test_export.py  test_fitter.py  test_gof.py  test_golden.py  test_metrics.py  test_multivariate.py  test_multivariate_reference.py  test_optimize.py  test_plot.py  test_ppf.py  test_resolve_params.py  test_shape.py  test_special.py  test_stats.py  test_timeseries_arma_garch.py  test_timeseries_diagnostics.py  test_timeseries_mean.py  test_timeseries_plotting.py  test_timeseries_serialization.py  test_timeseries_standard_errors.py  test_timeseries_summary.py  test_timeseries_two_stage_se.py  test_timeseries_variance.py  test_univariate.py  test_utils.py  test_validation.py
copulax/tests/_r_reference/: arma_garch_reference_data.py  fit_sample_data.py  generate_arma_garch_reference.R  generate_fit_sample.R  generate_gh_reference.R  generate_r_reference.R  gh_reference_data.py
copulax/tests/copulas/: conftest.py  test_archimedean.py  test_copulas.py
copulax/tests/golden/: archimedean.npz  copulas.npz  generate_golden.py  multivariate.npz  univariate.npz
copulax/tests/multivariate/: conftest.py  test_multivariate.py  test_shape.py
copulax/tests/univariate/: conftest.py  test_gof.py  test_new_univariate.py  test_univariate.py  test_univariate_fitter.py  test_utils.py
copulax/tests_new/: conftest.py  generate_r_reference.R  test_archimedean_reference.py  test_copulas_archimedean.py  test_copulas_elliptical.py  test_copulas_mv.py  test_data_scaler.py  test_export.py  test_fitter.py  test_gof.py  test_multivariate.py  test_multivariate_reference.py  test_optimize.py  test_ppf.py  test_serialization.py  test_shape.py  test_special.py  test_univariate.py  test_utils.py  test_wald.py
copulax/tests_new/_r_reference/: fit_sample_data.py  generate_fit_sample.R  generate_gh_reference.R  gh_reference_data.py
copulax/timeseries/: README.md  __init__.py
copulax/univariate/: README.md  __init__.py  distributions.py  gamma.py  gh.py  gig.py  ig.py  lognormal.py  normal.py  skewed_t.py  student_t.py  uniform.py
docs/: Makefile  README.md  conf.py  getting_started.rst  index.rst  make.bat
docs/api/: copulas.rst  index.rst  multivariate.rst  preprocessing.rst  special.rst  univariate.rst  utilities.rst
examples/: README.md  archimedean_copula_example.ipynb  copula_example.ipynb  corr_cov_example.ipynb  elliptical_copula_example.ipynb  multivariate_example.ipynb  univariate_example.ipynb
scripts/: release_smoke_test.py
