[project]
name = "copulax"
version = "3.0.0"
description = "Copula, multivariate and univariate distribution fitting using JAX in python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "Sklar",
    "Copula",
    "Copulas",
    "Copulae",
    "Probability",
    "Distribution",
    "Univariate",
    "Bivariate",
    "Multivariate",
    "Joint",
    "CDF",
    "PDF",
    "Modeling",
    "Quantitative",
    "Fitting",
    "SciPy",
    "Statistics",
    "Mathematics",
    "Science",
    "Scientific",
    "Finance",
    "Risk",
    "VaR",
    "Machine Learning",
    "Variables",
    "JAX",
]
authors = [{ name = "Tyler Mitchell", email = "tylerfmitchell1999@gmail.com" }]
maintainers = [
    { name = "Tyler Mitchell", email = "tylerfmitchell1999@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jax>=0.4.38,<0.7; python_version < '3.11'",
    "jax>=0.4.38; python_version >= '3.11'",
    "optax>=0.2.4",
    "quadax>=0.2.8",
    "interpax>=0.3.7",
    "matplotlib>=3.9.2",
    "numpy>=1.24",
    "equinox>=0.13.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "pytest-cov==6.0.0", "build", "twine"]

docs = ["sphinx>=7.0", "sphinx-rtd-theme>=2.0", "sphinx-autodoc-typehints>=2.0"]

[project.urls]
"Homepage" = "https://github.com/tfm000/copulax"
"Documentation" = "https://copulax.readthedocs.io"
"Bug Reports" = "https://github.com/tfm000/copulax/issues"
"Source" = "https://github.com/tfm000/copulax"

[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.38"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["copulax*"]
namespaces = true
